tests/query_errors/pp_embed_unrecognized_token5/error.txt
Error: 
    1 | define script snot
    2 | script
    3 |   use foo::bar as use;
      |                   ^^^ Found the token `use` but expected `<ident>`
      |                       NOTE: It looks like you tried to use the 'use' as an ident, consider quoting it as `use` to make it an identifier.
    4 |   event
    5 | end;